--- a/src/components/ProfilePage.css
+++ b/src/components/ProfilePage.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    width: 450px;
     background: linear-gradient(to bottom, #86e1d8, #ffffff); /* Gradient background */
     padding: 20px;
   }
