--- a/src/components/SplashScreen.css
+++ b/src/components/SplashScreen.css
@@ -20,7 +20,7 @@
     border: none;
     cursor: pointer;
     background-color: #007bff;
-    color: white;
+    color: rgb(0, 0, 0);
     border-radius: 5px;
 }
 
