--- a/src/components/Registration.css
+++ b/src/components/Registration.css
@@ -16,7 +16,8 @@
     align-items: center;
     justify-content: center;
     padding: 2rem;
-    
+    width: 750px;
+    margin-top: 1000px;
   }
   
   /* Logo */
