--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -21,10 +21,10 @@ body {
 
 /* Login Container Styles */
 .login-container {
-  background: rgba(255, 255, 255, 0.8); /* Add a semi-transparent white background */
+  background: rgba(255, 255, 255, 0.8); 
   padding: 50px;
   border-radius: 10px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Slight shadow for better contrast */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
   text-align: center;
   width: 90%;
   max-width: 400px;
