--- a/src/styles/FeedBack.css
+++ b/src/styles/FeedBack.css
@@ -26,8 +26,81 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width: 120px; /* Reduced width */
+    margin: 5px auto; /* Centers the buttons */
   }
   
   .feedback-form button:hover {
     background-color: #45a049;
   }
+  
+
+  .feedback-form {
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    max-height: 80%;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+    padding: 3% 2% 2% 2%;
+    width: 90%;
+  }
+  
+  .feedback-form input,
+  .feedback-form textarea {
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .feedback-form button {
+    padding: 10px;
+    font-size: 16px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .feedback-form button:hover {
+    background-color: #45a049;
+  }
+  
+  .star-rating {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+  }
+  
+  .star {
+    font-size: 35px;
+    color:rgb(53, 56, 52);
+    cursor: pointer;
+    
+  }
+  
+  .star.filled {
+    color: #dfc00f;
+    
+  }
+
+  .star-rating {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+    justify-content: center;
+  }
+  
+  .star {
+    width: 40px; /* Adjust size as needed */
+    height: 40px; /* Adjust size as needed */
+    margin: 0 5px; /* Add spacing between stars */
+    cursor: pointer;
+  }
+  
